Add a new page for viewing uploaded files

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
     <main>
         <p>Click the button below to upload a file.</p>
         <a href="/upload" class="btn">Go to Upload Page</a>
+        <a href="{{ url_for('view_files') }}" class="btn">View Files</a>
     </main>
 </body>
 </html>
