--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1>Upload a File</h1>
+        <nav class="nav-links">
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('upload') }}">Upload</a>
+            <a href="{{ url_for('view_files') }}">View Files</a>
+        </nav>
     </header>
     <main>
         <form action="/upload" method="POST" enctype="multipart/form-data">
