--- a/templates/view.html
+++ b/templates/view.html
@@ -5,8 +5,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Uploaded Files</h1>
+        <nav class="nav-links">
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('upload') }}">Upload</a>
+            <a href="{{ url_for('view_files') }}">View Files</a>
+        </nav>
+    </header>
+    <div class="container">
         <div class="file-list">
             {% for file in files %}
             <div class="file-item">
