--- a/templates/view_text.html
+++ b/templates/view_text.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+    <header>
+        <h1>{{ filename }}</h1>
+        <nav class="nav-links">
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('upload') }}">Upload</a>
+            <a href="{{ url_for('view_files') }}">View Files</a>
+        </nav>
+    </header>
     <div class="container">
         <h1>{{ filename }}</h1>
         <div class="text-content">
